  turned on if the destination name is the currently ACTIVE user name, which
  can be selected by pressing Ctrl+U AND the Rvd flag is only turned
  on if the destination address is the default address of the current
  mail area, you must add "Switch ReceiveAllNames Off" and
  "Switch ReceiveAllAddresses Off" to the configuration file.

Fixes:

- Reduced the memory requirements of a Borland compiled DOS executable
  considerably in case of a lot of "Alias" definitions. Again the realloc()
  problem.

- Fixed display of kludge character (001) on Linux.

- The last line of the screen is now usable in the Message Editor also
  when the Status Bar is switched off.

- Fixed the handling of FIDOUSER.LST in case of user entries that did not
  contain a ",", like "Echolist".

- Fixed a bug that caused Msged to sometimes trash lastread pointers in
  exactly one (mostly, but not necessarily the first *.MSG area) message area
  when exiting.

- If you used "scan" to do an area scan on startup, the scan could
  not be interrupted if you also used the autostart macro.

- The autostart macro (and probably also other macro functions) did not 
  work properly.

- If you quote a mail from a person like Bill 'billy' Gates, the quote initals
  will be BbG now (instead of B'G). mtt

- Fixed bugs in the routine that allowed for redefinition of areas
  (i.E. manual redefition of files that previously have been imported
  from an areafile - sometimes it simply would not work).

- Backslashes could not be used in the template files. Fixed. (You only
  need to enter a SINGLE backslash to produce one!).

- Segmenatation faults and even worse errors fixed when Msged was started in
  a very small terminal (e.g. 8x8).

- Typing umlauts did not work any more  after an OS shell (Alt+J) has been
  performed. 

- If a mail in an area with the "u" flag contained multiple "from:"-lines
  (which happens if an internet user forwards mail from another internet